# lichtzeug-neu

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/core/: automation.rs  editor.rs  engine.rs  engine_link.rs  event.rs  fixtures.rs  hardware.rs  history.rs  ids.rs  mod.rs  output.rs  project.rs  queue.rs  reducer.rs  show.rs  spec.rs  state.rs  time.rs  validation.rs
src/ui/: fixture_view.rs  mod.rs  theme.rs  timeline.rs
tests/: foundation_arch.rs
