[package]
name = "luma_switch"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["canvas", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.20.0"
midir = "0.10.3"
serialport = "4.9.0"
